SW-3883 - Fix the blurred images in the article module

--- a/templates/_default/backend/_resources/resources/themes/stylesheets/shopware-ui/modules/_article.scss
+++ b/templates/_default/backend/_resources/resources/themes/stylesheets/shopware-ui/modules/_article.scss
@@ -220,7 +220,7 @@
         .#{$prefix}article-image-info .article-thumb-wrap .inner-thumb,
         .#{$prefix}article-image-info .article-thumb-wrap .inner-thumb img {
             max-width: 100% !important;
-            height: 100% !important;
+            max-height: 100% !important;
             display: block !important;
         }
         .#{$prefix}article-image-info .article-thumb-wrap .inner-thumb img {
